--- a/secret.html
+++ b/secret.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hinweis 5</title>
     <script src="files/script.js"></script>
 
     <style>
