--- a/files/secr3t.html
+++ b/files/secr3t.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        open('https://servantoffire.github.io/secret/secret.html')
+    </script>
 </body>
 </html>
