--- a/files/secr3t.html
+++ b/files/secr3t.html
@@ -9,6 +9,7 @@
 <body>
     <script>
         open('https://servantoffire.github.io/secret/secret.html')
+        close()
     </script>
 </body>
 </html>
